# reportdaily

./: .buildinfo  .bumpversion.cfg  Changelog.md  MANIFEST.in  README.md  RELEASE.md  devel-requirements.txt  genindex.html  index.html  objects.inv  reportdaily.html  search.html  searchindex.js  setup.cfg  workspace.code-workspace
.doctrees/: environment.pickle  index.doctree  reportdaily.doctree
.github/workflows/: coverage-badge.yml  manpage-build.yml  pytest.yml
_sources/: index.rst.txt  reportdaily.rst.txt
docs/: conf.py  index.rst  reportdaily.rst
tests/: conftest.py  database.py  reportdaily.py  test_cli.py  test_init.py
