[metadata]
name = reportdaily
version = 0.3.0
description = "..."
long_description = file: README.md
long_description_content_type = text/markdown
author = Eugen Maksymenko
author_email = eugen.maksymenko@suse.com
url = https://github.com/SchleichsSalaticus/reportdaily
download_url = https://github.com/SchleichsSalaticus/reportdaily/download
classifiers =
  # See https://pypi.org/pypi?%3Aaction=list_classifiers
  Development Status :: 1 - Planning
  Operating System :: POSIX
  Operating System :: POSIX :: Linux
  Programming Language :: Python :: 3
  Programming Language :: Python :: 3.6
  Programming Language :: Python :: 3.7
  Programming Language :: Python :: 3.8
  Programming Language :: Python :: 3.9
license_file =  LICENSE

[sdist]
formats = bztar, zip

[tool:pytest]
minversion = 3.0
testpaths= tests/
addopts = --cov=reportdaily tests/  --cov-report=term-missing

[options]
scripts =
    bin/reportdaily.py
python_requires = >=3.6.*
include_package_data = True

# install_requires =
#   <name python project>